--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/LocationSearch.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/LocationSearch.cshtml
@@ -169,6 +169,9 @@
     <div id="address-lookup">
         <div class="form-group form-group-compound" id="addressInputWrapper">
             <label for="postcode-search" class="form-label bold-small">Enter the vacancy location or postcode</label>
+            <div class="hgroup-medium">
+                <p class="subtitle">You have chosen for this employer to be anonymous. Only the town or city for each location will be visible to candidates.</p>
+            </div>
             <input id="postcode-search" type="text" class="form-control form-control-1-3" spellcheck="false" autocorrect="off" data-bind="style: {'display': addModeOn() }"/>
             <a href="#" id="add-new-location" data-bind="style: {'display': addModeOff() }, click: addNewLocation">Add another location </a>
             <span class="visuallyhidden" id="ariaAddressEntered" aria-live="polite"></span>
