ra-402: Show only town if anonymous employer in Manage dashboard.

--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancySummaries.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancySummaries.cshtml
@@ -111,11 +111,15 @@
                                             else
                                             {
                                                 @vacancy.Location.Town<br />
-                                                <div class="hgroup-small">
-                                                    <p class="subtitle">@vacancy.Location.Postcode</p>
-                                                </div>
+                                                if(vacancy.VacancyViewModel !=null && !vacancy.VacancyViewModel.IsEmployerAnonymous)
+                                                {
+                                                    <div class="hgroup-small">
+                                                        <p class="subtitle">@vacancy.Location.Postcode</p>
+                                                    </div>
+                                                }
                                             }
                                         </td>
+
                                         <td class="reactive-header" data-label="Date submitted">
                                             @vacancy.DateSubmitted.ToGmtDate()
                                         </td>
