ra-402: add proper label for comments section.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
@@ -9,7 +9,7 @@
 
     var saveButtonText = (Model.Status == VacancyStatus.Referred || Model.ComeFromPreview) &&
         Model.IsEmployerLocationMainApprenticeshipLocation.HasValue &&
-        Model.IsEmployerLocationMainApprenticeshipLocation.Value == true ? "Save and return to Preview" : "Save and continue";
+        Model.IsEmployerLocationMainApprenticeshipLocation.Value ? "Save and return to Preview" : "Save and continue";
 }
 
 <div class="grid-wrapper">
