--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancySummaries.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancySummaries.cshtml
@@ -80,7 +80,7 @@
                                         Model.SearchViewModel.Order == Order.Ascending ? "fa-sort-up" : "fa-sort-down" : "fa-sort";
                                 }
                                 <a href="@Url.RouteUrl(ManagementRouteNames.Dashboard, new DashboardVacancySummariesSearchViewModel(Model.SearchViewModel, DashboardVacancySummariesSearchViewModel.OrderByFieldSubmissionCount, submissionCountNewOrder))">
-                                    <span>Referred count <i class="fa @submissionCountSortClass" aria-hidden="true"></i></span>
+                                    <span>Submission count <i class="fa @submissionCountSortClass" aria-hidden="true"></i></span>
                                 </a>
                             </th>
                             <th></th>
